--- a/TitanicAnalysis/TitanicAnalysis.csproj
+++ b/TitanicAnalysis/TitanicAnalysis.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileUtility.cs" />
+    <Compile Include="IFileUtility.cs" />
     <Compile Include="Passenger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
